Working towards engine encapsulation and a UI service API